syntax = "proto3";

package link_service;

option go_package = "/link_service;link_service";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service LinkService{
  rpc GetLink(GetLinkRequest) returns (GetLinkResponse);
  rpc AddLink(AddLinkRequest) returns (google.protobuf.Empty);
}

message GetLinkRequest {
  string uri = 1;
}

message  GetLinkResponse {
  string link = 1;
}

message  AddLinkRequest {
  string link = 1;
  string fakeLink = 2;
  google.protobuf.Timestamp eraseTime = 3;
}